# open-cite

./: .dockerignore  .gitignore  .ignore  Dockerfile  README.md  app.yaml  databricks_app.py  publish.sh  pyproject.toml  run_dev.sh  setup_aws.md  test_bedrock_call.py  verify_bedrock.py  webapp.code-workspace
.github/workflows/: deploy-website.yml  integration-tests.yml  publish-image.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  GCP_MCP_LABELING_GUIDE.md  PLUGINS.md  README.md  REST_API.md  SCHEMA_DOCUMENTATION.md  SENDING_TRACES.md  WEBSITE_PROPOSAL.md
docs/plugins/: AWS_PLUGINS.md  AZURE_AI_FOUNDRY_PLUGIN.md  GOOGLE_CLOUD_PLUGIN.md  LITELLM_PLUGIN.md  MCP_PLUGIN.md  MICROSOFT_FABRIC_PLUGIN.md  OPENTELEMETRY_PLUGIN.md
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
schema/: opencite-schema.json
src/open_cite/: __init__.py  __main__.py  _version.py  client.py  config_crypto.py  core.py  databricks_otel_forwarder.py  generate_test_data.py  http_client.py  identifier.py  otlp_converter.py  plugin_store.py  schema.py
src/open_cite/api/: __init__.py  app.py  config.py  health.py  persistence.py  shutdown.py
src/open_cite/asgi/: __init__.py  app.py  grpc_handler.py
src/open_cite/db/: __init__.py  engine.py  models.py
src/open_cite/gui/: app.py
src/open_cite/gui/static/: LangGuard Logo Text.png:Zone.Identifier
src/open_cite/gui/templates/: index.html
src/open_cite/plugins/: __init__.py  azure_ai_foundry.py  databricks.py  databricks_otlp_converter.py  google_cloud.py  google_cloud_otlp_converter.py  litellm.py  logs_adapter.py  mcp.py  microsoft_fabric.py  opentelemetry.py  registry.py  splunk.py  zscaler.py
src/open_cite/plugins/aws/: __init__.py  agentcore.py  base.py  bedrock.py  sagemaker.py
src/open_cite/resources/: plugin_instances.json  tool_mapping.json
tests/: README.md  UI_TESTING_GUIDE.md  __init__.py  test_api.py  test_cross_batch_correlation.py  test_cross_integration_boundary.py  test_databricks.py  test_eviction.py  test_identifier.py  test_instance_update_and_verify.py  test_integration_id.py  test_integration_id_contamination.py  test_litellm.py  test_logs_adapter.py  test_microsoft_fabric.py  test_splunk.py  test_webhook_delivery.py
tests/fixtures/: __init__.py  sample_logs_payload.json  send_test_trace.py
website/: CNAME  index.html
website/css/: style.css
website/js/: main.js
