[project]
name = "open-cite"
version = "0.1.0"
description = "Open Cite project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.36.0",
    "databricks-sql-connector>=4.0.0",
    "mlflow>=2.17.0",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
opencite = "open_cite.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_cite"]
