[project]
name = "open-cite"
dynamic = ["version"]
description = "Open Cite project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.36.0",
    "databricks-sql-connector>=4.0.0",
    "mlflow>=2.17.0",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "boto3>=1.34.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-auth>=2.0.0",
    "hypercorn>=0.17.0",
    "asgiref>=3.7.0",
    "python-socketio>=5.10.0",
    "opentelemetry-proto>=1.20.0",
    "protobuf>=4.25.0",
    "pyvis>=0.3.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "databricks-sqlalchemy>=1.0",
    "Flask-Limiter>=3.5.0",
    "cryptography>=42.0",
    "openai>=1.0.0",
    "openai-agents>=0.1.0",
    "openai-guardrails>=0.2.0",
    # Keep the spaCy/thinc stack on versions that publish aarch64 wheels.
    # openai-guardrails only asks for thinc>=8.3.6, which lets the resolver try
    # thinc 9.x first. thinc 9.x ships no aarch64 wheel and requires
    # blis>=1.0.0,<1.1.0, which has none either — so an arm64 image build
    # compiles BLIS from source for ~3h and then dies generating thinc's
    # metadata (its Cython sources need cython<3). spaCy caps thinc<8.4.0
    # anyway; stating it here keeps the resolver off 9.x from the start.
    "thinc>=8.3.12,<8.4.0",
    "blis>=1.3.0,<1.4.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-openai-agents>=0.1.0",
    "pydantic>=2.0",
]

[project.scripts]
opencite = "open_cite.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Timestamp-based version so every build produces a unique wheel,
# forcing Databricks Apps to reinstall on each deploy.
source = "code"
path = "src/open_cite/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/open_cite"]
